# rsd

./: README.md  pyproject.toml
src/rsd/: __init__.py  cli.py
