[build-system]
requires = ["flit_core >=3.11,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rsd"
authors = [{name = "Jody Phelan", email = "jody.phelan@lshtm.ac.uk"}]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dynamic = ["version", "description"]

[project.scripts]
rsd = "rsd.cli:entrypoint"